--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -16,7 +15,7 @@
     </div>
 <nav class="sidebar">
       <div class="text">
-       Hola Amigo</div>
+       Hola Amigos</div>
 <ul>
 <li class="active" ><a href="#">HAPPY BIRTHDAY!!!</a></li>
 <li>
