--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 <nav class="sidebar">
       <div class="text">
-       Hola Amigos</div>
+       Hola Amigo</div>
 <ul>
 <li class="active" ><a href="#">HAPPY BIRTHDAY!!!</a></li>
 <li>
@@ -48,10 +48,10 @@
       <div class= "content"> 
       <div class= "header">
 <p align="center"> 
-<!-- For those who are looking for a job, the CV is an overview of a person's experience. It should persuade an employer that the applicant is the exact person who should be hired for a certain position. Very often it's the only reason to invite a job seeker for an interview. Therefore, make sure you meet the requirements and expectations of the hirer. It is really important to make your representation special to encourage hirers to choose you from the numerous contenders. --></p></div>
+
 <p ><b>
 A VERY HAPPY BIRTHDAY SIMMI!!</b>
-  <!-- For those who are looking for a job, the CV is an overview of a person's experience. It should persuade an employer that the applicant is the exact person who should be hired for a certain position. Very often it's the only reason to invite a job seeker for an interview. Therefore, make sure you meet the requirements and expectations of the hirer. It is really important to make your representation special to encourage hirers to choose you from the numerous contenders --></p>
+</p>
 </div>
 
  <script>
