--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body >
-	  <audio controls autoplay >
+<!-- 	  <audio controls autoplay loop>
         <source src="Simran.mp3" type="audio/mp3" ></source>
    Your browser isn't invited for super fun audio time.
-    </audio>
+    </audio> -->
     <div class="btn">
     <span class="fas fa-bars"></span>
     </div>
